--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "app",
+  "name": "sudhama-farm",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A modern, component-based architecture for SuDhama Farm",
+  "main": "src/index.js",
   "scripts": {
-    "build": "npx tailwindcss -i assets/css/input.css -o assets/css/style.css"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext js,jsx",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SumanthUdupi/SudhamaFarms.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "keywords": ["react", "vite", "modern", "component-based"],
+  "author": "SuDhama Team",
+  "license": "MIT",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/SumanthUdupi/SudhamaFarms/issues"
   },
   "homepage": "https://github.com/SumanthUdupi/SudhamaFarms#readme",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.23",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "prettier": "^3.3.3",
+    "tailwindcss": "^4.1.18",
+    "vite": "^5.4.1"
   },
   "dependencies": {
-    "baseline-browser-mapping": "^2.9.11",
-    "browserslist": "^4.28.1",
-    "caniuse-lite": "^1.0.30001761",
-    "electron-to-chromium": "^1.5.267",
-    "escalade": "^3.2.0",
-    "fraction.js": "^5.3.4",
-    "nanoid": "^3.3.11",
-    "node-releases": "^2.0.27",
-    "picocolors": "^1.1.1",
-    "postcss-value-parser": "^4.2.0",
-    "source-map-js": "^1.2.1",
-    "update-browserslist-db": "^1.2.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   }
 }
